8/25 Fix Menu - but Width too small

--- a/style.css
+++ b/style.css
@@ -35,14 +35,14 @@ body {
   display: -ms-flexbox;
   display: flex;
   color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  /*text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);*/
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
-/*.cover-container {
-  max-width: 40em;
+.cover-container {
+  max-width: 90em;
 }
-*/
+
 
 /*
  * Header
